# bw-clients

./: .eslintrc.json  .gitignore  .npmrc  LICENSE.txt  README.md  angular.json  build.sh  console.log.js  enable-passkeys.patch  eslint.config.mjs  jest.config.js  knip.json  nx.json  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.config/: dotnet-tools.json
.github/: CODEOWNERS  copilot-instructions.md  renovate.json  renovate.json5  whitelist-capital-letters.txt
.github/ISSUE_TEMPLATE/: browser.yml  cli.yml  desktop.yml  web.yml
.github/workflows/: alert-ddg-files-modified.yml  auto-merge.yml  build-browser.yml  build-cli.yml  build-desktop-target.yml  build-desktop.yml  build-web.yml  chromatic.yml  deploy-web.yml  go-phish.yml  lint.yml  nx.yml  playwright.yml  publish-browser.yml  publish-desktop.yml  release-browser.yml  release-cli.yml  release-desktop-beta.yml  release-desktop.yml  release-web.yml  scan.yml  staged-rollout-browser.yml  test-browser-interactions.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
.storybook/: main.ts  preview-head.html  preview.tsx
apps/browser/: gulpfile.js  index.html  jest.config.js  package.json  performance-mark.js  test.setup.ts  tsconfig.json  webpack.base.js  webpack.config.js
apps/cli/: jest.config.js  package.json  project.json  tsconfig.json  webpack.config.js  webpack.npm.config.js  webpack.nx.config.js  webpack.shared.js
apps/desktop/: com.bitwarden.pfx  custom-appx-manifest.xml  electron-builder.json  package.json  sign.js  sign.ps1  tsconfig.json
apps/desktop/desktop_native/autotype/: Cargo.toml
apps/desktop/desktop_native/autotype/src/: lib.rs  windows.rs
apps/desktop/desktop_native/autotype/src/windows/: type_input.rs  window_title.rs
apps/desktop/desktop_native/macos_provider/: Cargo.toml  README.md
apps/desktop/desktop_native/macos_provider/docs/: macos-passkey-provider-explainer.md
apps/desktop/desktop_native/macos_provider/src/: assertion.rs  lib.rs  registration.rs
apps/desktop/desktop_native/napi/: Cargo.toml  index.d.ts  index.js  package.json
apps/desktop/desktop_native/napi/src/: lib.rs
apps/desktop/desktop_native/napi/src/autotype_internal/: dummy.rs  windows.rs
apps/desktop/desktop_native/napi/src/passkey_authenticator_internal/: dummy.rs  windows.rs
apps/desktop/desktop_native/ssh_agent/: Cargo.toml
apps/desktop/desktop_native/ssh_agent/examples/: integration.rs
apps/desktop/desktop_native/ssh_agent/src/: lib.rs
apps/desktop/desktop_native/ssh_agent/src/agent/: agent.rs  desktop_agent.rs  mod.rs  platform.rs  ui_requester.rs
apps/desktop/desktop_native/ssh_agent/src/agent/platform/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/hostinfo/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/knownhosts/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/memory/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/protocol/: agent_listener.rs  async_stream_wrapper.rs  connection.rs  key_store.rs  mod.rs  protocol.rs  replies.rs  requests.rs  types.rs
apps/desktop/desktop_native/ssh_agent/src/transport/: mod.rs  named_pipe_listener_stream.rs  peer_info.rs  unix_listener_stream.rs
apps/desktop/desktop_native/ssh_agent/tests/: integration.rs
apps/desktop/desktop_native/windows_plugin_authenticator/: Cargo.toml
apps/desktop/desktop_native/windows_plugin_authenticator/src/: assert.rs  com_buffer.rs  com_provider.rs  com_registration.rs  ipc.rs  lib.rs  make_credential.rs  pluginauthenticator.rs  sync.rs  types.rs  util.rs  utils.rs  webauthn.rs
apps/desktop/desktop_native/windows_plugin_authenticator/src/samples/: PluginRegistrationManager.cpp.sample  PluginRegistrationManager.h.sample  pluginauthenticator.h.sample  webauthn.h.sample
apps/web/: jest.config.js  package.json  project.json  tsconfig.build.json  tsconfig.json  webpack.base.js  webpack.config.js  webpack.i18n.js  webpack.npm.config.js  webpack.nx.config.js
bitwarden_license/bit-browser/: tsconfig.json  webpack.config.js
bitwarden_license/bit-cli/: jest.config.js  tsconfig.json  webpack.config.js
bitwarden_license/bit-common/: tsconfig.json
bitwarden_license/bit-web/: jest.config.js  tsconfig.build.json  tsconfig.json  webpack.config.js
docs/: bitwarden_system.dsl  bitwarden_system.json  shared.models.dsl  shared.relationships.dsl
docs/admin_console/: models.dsl
docs/auth/: models.dsl
docs/key_management/: models.dsl  views.dsl
docs/usage_docs/: perspectives.md  tags.md
libs/admin-console/: jest.config.js  tsconfig.json
libs/angular/: jest.config.js  project.json  tsconfig.json
libs/api/: README.md  jest.config.js  package.json  project.json
libs/auth/: jest.config.js  project.json  tsconfig.json
libs/auth-functions/: jest.config.js  package.json  tsconfig.json
libs/auth-types/: package.json  tsconfig.json
libs/billing/: jest.config.js  project.json
libs/common/: .gitkeep  jest.config.js  tsconfig.json  tsconfig.lib.json
libs/components/: project.json  tailwind.config.base.js  tsconfig.json
libs/device-type/: README.md  jest.config.js  package.json  project.json
libs/encoding/: README.md  jest.config.js  package.json  project.json
libs/eslint/: jest.config.js  tsconfig.json
libs/importer/: jest.config.js  project.json  tsconfig.json
libs/key-management/: jest.config.js  package.json  project.json  tsconfig.json
libs/key-management-ui/: jest.config.js  project.json  tsconfig.json
libs/legacy-api/: README.md  jest.config.js  package.json  project.json
libs/logging/: tsconfig.spec.json
libs/logout/: README.md  jest.config.js  package.json  project.json  tsconfig.json
libs/messaging/: README.md  tsconfig.spec.json
libs/messaging-internal/: package.json  project.json
libs/node/: jest.config.js  project.json  tsconfig.json
libs/nx-plugin/: project.json  (+1 more)
scripts/: README-strict-mode.md  strict-mode-utils.js  test-strict-compliance.js
(+2917 files in other folders)
