[package]
name = "autotype"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging" ] }
windows-core = { workspace = true }
