[package]
name = "autotype"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[target.'cfg(windows)'.dependencies]
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
