[package]
name = "ssh_agent"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
default = [
    "dep:windows",
]
manual_test = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
block-padding = { version = "=0.4.0-rc.4" }
ed25519 = { workspace = true, features = ["pkcs8"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = { workspace = true }
inout = { version = "=0.2.0-rc.6" }
homedir = { workspace = true }
log = { workspace = true }
rsa = { version = "=0.10.0-rc.8", features = ["sha2"] }
pin-project = { workspace = true }
sha2 = "0.10.9"
ssh-encoding = "=0.3.0-rc.2"
ssh-key = { version = "=0.7.0-rc.3",  features = [
    "encryption",
    "ed25519",
    "rsa",
    "ecdsa",
    "getrandom",
] }
num_enum = "0.7.4"
signature = "3.0.0-rc.4"
sysinfo = { workspace = true, features = ["windows"] }
tracing-subscriber.workspace = true
tracing = { workspace = true }
p256 = "0.13.2"
p384 = "0.13.1"
p521 = "0.13.3"
tokio = { workspace = true, features = ["io-util", "sync", "macros", "net"] }
tokio-util = { workspace = true, features = ["codec"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Pipes",
], optional = true }
windows-future = { workspace = true }

[lints]
workspace = true
